--- a/2_front_end/7_final_tp/styles/styles.css
+++ b/2_front_end/7_final_tp/styles/styles.css
@@ -1,11 +1,23 @@
-/* Set height of body and the document to 100% to enable "full page tabs" */
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial;
-  background-color: black;
-
+body{
+  background-color: white;
+  font-family: Arial, sans-serif; 
+  color: #333;
 }
+footer{
+  width: auto;
+  padding: 0% 10%;
+  color: blanchedalmond;
+  background-color: black;
+}
+
+div{
+  
+  text-align: left ;
+  padding-left: 5%;
+}
+
+/* Set height of body and the document to 100% to enable "full page tabs" */
+
 
 /* Style tab links */
 
@@ -32,10 +44,32 @@ body, html {
   color: white;
   display: none;
   padding: 100px 20px;
-  height: 100%;
+  min-height: 600px;
 }
+
+/* Style tables */
+
+td,th{
+  width: 50px;
+}
+
 
 #Home {background-color: red;}
 #News {background-color: green;}
 #Contact {background-color: blue;}
 #About {background-color: orange;}
+
+.foot{
+  height: auto;
+  padding: 5px;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items:normal ;
+}
+a{
+  text-decoration: none;
+  color: blanchedalmond;
+}
+dd{
+  margin-left: 0;
+}
